--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -18,8 +18,8 @@ requirements:
     - cmake
     - python >=3.6,{{PY_VER}}*
     - xtensor
-    - xtensor-python
-    - pybind11 >=2.2.1
+    - xtensor-python >=0.15 # uint64 bindings were broken before 0.15
+    - pybind11 >=2.2.1 # Required for call_guard
     - boost
 
   run:
