--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -17,8 +17,8 @@ requirements:
   build:
     - cmake
     - python >=3.6,{{PY_VER}}*
-    - xtensor
-    - xtensor-python >=0.15 # uint64 bindings were broken before 0.15
+    - xtensor >=0.15
+    - xtensor-python >=0.17 # uint64 bindings were broken before 0.15
     - pybind11 >=2.2.1 # Required for call_guard
     - boost
 
