--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -17,6 +17,7 @@ requirements:
   build:
     - cmake
     - python >=3.6,{{PY_VER}}*
+    - numpy {{NPY_VER}}* # To avoid runtime errors about the numpy ABI
     - xtensor >=0.15
     - xtensor-python >=0.17 # uint64 bindings were broken before 0.15
     - pybind11 >=2.2.1 # Required for call_guard
@@ -25,7 +26,7 @@ requirements:
 
   run:
     - python {{PY_VER}}*
-    - numpy
+    - numpy {{NPY_VER}}*
     - draco 1.0.1
 
 test:
