pydraco: Major enhancements: - Deduplicate points before and after decoding - Encode normals - Fix decoding logic if non-unique vertexes/normals exist - Check preconditions before encoding - More tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,9 @@ endif()
 #include_directories(include)
 
 
+# Support deduplication in draco encoding.
+add_definitions("-DDRACO_ATTRIBUTE_DEDUPLICATION_SUPPORTED=1")
+
 #-------------------------------------------------------------------------------------------------------------------
 # Setup python bindings
 #-------------------------------------------------------------------------------------------------------------------
