--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -12,6 +12,7 @@ source:
 
 build:
   number: 0
+  string: py{{CONDA_PY}}_{{PKG_BUILDNUM}}_g{{GIT_FULL_HASH[:7]}}
 
   # By default, gcc-5+ can't be used if we intend to link with
   # packages that were produced with lower versions of gcc.
@@ -30,12 +31,12 @@ requirements:
     - xtensor >=0.15
     - xtensor-python >=0.17 # uint64 bindings were broken before 0.15
     - pybind11 >=2.2.1 # Required for call_guard
-    - draco 1.0.1
+    - draco 1.3.4.*
     - boost
   run:
     - python {{PY_VER}}*
     - numpy {{NPY_VER}}*
-    - draco 1.0.1
+    - draco 1.3.4.*
 
 test:
   requires:
