--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -29,7 +29,7 @@ requirements:
     - python >=3.6,{{PY_VER}}*
     - numpy {{NPY_VER}}* # To avoid runtime errors about the numpy ABI
     - xtensor >=0.15
-    - xtensor-python >=0.17 # uint64 bindings were broken before 0.15
+    - xtensor-python 0.19.* # https://github.com/QuantStack/xtensor-python/issues/167
     - pybind11 >=2.2.1 # Required for call_guard
     - draco 1.3.4.*
     - boost
