--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .ipynb_checkpoints/
 dist/
 build/
+src/include/
 *.py[cod]
 
 # OS X
@@ -17,8 +18,10 @@ _generate/
 .cproject
 .settings
 
+#vscode
+.vscode
+
 # pytest
 .cache
-
 
 /Debug/
