--- a/conda-recipe/conda_build_config.yaml
+++ b/conda-recipe/conda_build_config.yaml
@@ -12,27 +12,23 @@
 #
 
 boost:
-  - 1.68
+  - 1.78
 boost_cpp:
-  - 1.68
+  - 1.78
 hdf5:
-  - 1.10.4
+  - 1.12.1
 numpy:
-  - 1.16
+  - 1.21
 python:
-  - 3.7
-pyqt:
-  - 5.6
-qt:
-  - 5.6
+  - 3.10
+python_impl:
+  - cpython
 
 pin_run_as_build:
   boost: x.x
   hdf5: x.x.x
   numpy: x.x
   python: x.x
-  pyqt: x.x
-  qt: x.x
 
 CONDA_BUILD_SYSROOT:
-  - /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.9.sdk
+  - /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.13.sdk
