--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -22,9 +22,9 @@ requirements:
   host:
     - python {{ python }}*
     - numpy {{ numpy }}* # To avoid runtime errors about the numpy ABI
-    - xtensor 0.19.3
-    - xtensor-python 0.22.1
-    - pybind11 2.2.4
+    - xtensor
+    - xtensor-python
+    - pybind11
     - draco 1.3.4.*
     - boost
   run:
