--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -27,7 +27,7 @@ requirements:
     - xtensor-python 0.26.1
     - pybind11 2.10
     - draco 1.3.4.*
-    - boost
+    - boost-cpp  # We only use some headers.
   run:
     - python {{ python }}*
     - numpy {{ numpy }}*
