--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -22,7 +22,7 @@ requirements:
     - cmake
   host:
     - python {{ python }}*
-    - numpy {{ numpy }}* # To avoid runtime errors about the numpy ABI
+    - numpy {{ numpy }}
     - xtensor
     - xtensor-python
     - pybind11
@@ -30,7 +30,7 @@ requirements:
     - boost-cpp  # We only use some headers.
   run:
     - python {{ python }}*
-    - numpy {{ numpy }}*
+    - {{ pin_compatible('numpy') }}
     - draco 1.3.4.*
 
 test:
