--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -27,7 +27,7 @@ requirements:
     - xtensor-python
     - pybind11
     - draco 1.3.4.*
-    - boost-cpp  # We only use some headers.
+    - libboost-headers  # We only use some headers.
   run:
     - python {{ python }}*
     - {{ pin_compatible('numpy') }}
